# kyleManagement/src/main/java/com/kylemanagement/controller/TicketTypologyController.java
@@ -1,0 +1,32 @@
+package com.kylemanagement.controller;
+
+import com.api.handler.TypologyResourceApi;
+import com.api.model.TicketTypologyDto;
+import com.kylemanagement.mapper.TicketTypologyMapper;
+import com.kylemanagement.service.TicketTypologyService;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+import static org.springframework.http.ResponseEntity.noContent;
+import static org.springframework.http.ResponseEntity.ok;
+
+@RestController
+@RequiredArgsConstructor
+public class TicketTypologyController implements TypologyResourceApi {
+
+    final TicketTypologyService ticketTypologyService;
+    final TicketTypologyMapper ticketTypologyMapper;
+
+    @Override
+    public ResponseEntity<TicketTypologyDto> createTypology(TicketTypologyDto ticketTypologyDto) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<List<TicketTypologyDto>> getTypologies() {
+        List<TicketTypologyDto> ticketTypologyDtos = ticketTypologyService.getTicketTypologies().stream().map(ticketTypologyMapper::toTicketTypologyDto).toList();
+        return ticketTypologyDtos.isEmpty() ? noContent().build() : ok(ticketTypologyDtos);
+    }
+}
